# engenheiro_nfe_parquet

./: .gitignore  Desc_Tecnica.md  README.md  bundle.ps1  pyproject.toml  requirements.txt
mashup_qlik/: index.html
mashup_qlik/components/: detailTable.js  filterBar.js  groupChart.js  header.js  kpiCard.js  rankingChart.js  regionChart.js  stateChart.js
mashup_qlik/css/: base.css  components.css  layout.css  mobile.css  theme.css
mashup_qlik/js/: app.js  charts.js  filters.js  kpis.js  layout.js  mockData.js
src/nfe_parquet/: __init__.py  cli.py
src/nfe_parquet/checkpoint/: fingerprint.py  store_sqlite.py
src/nfe_parquet/config/: loader.py  models.py
src/nfe_parquet/domain/: models.py
src/nfe_parquet/flatten/: __init__.py  flatten_cte.py  flatten_nfe.py  runner.py
src/nfe_parquet/io/: scanner.py  zip_extract.py
src/nfe_parquet/observability/: __init__.py  json_formatter.py  json_looger.py  logger.py  setup.py
src/nfe_parquet/orchestrator/: chunking.py  mvp_runner.py  pipeline.py  pipeline_cte_mt.py  pipeline_mt.py
src/nfe_parquet/parse/: cte_parser.py  nfe_parser.py  xml_utils.py
src/nfe_parquet/schema/: cte_schema.py  parquet_schema.py
src/nfe_parquet/transform/: filters.py  window.py
src/nfe_parquet/write/: atomic_commit.py  parquet_writer.py
tests/: conftest.py  test_checkpoint.py  test_compact_month.py  test_dead_letter.py  test_flatten.py  test_parser.py  test_transform.py  test_writer.py
tests/fixtures/: cte_cteproc.xml  make_zip.py  nfe_campos_opcionais_ausentes.xml  nfe_direta_demi.xml  nfe_nfeproc.xml
